Lasso select not functioning correctly in Armature Edit Mode. #70601

Closed
opened 2019-10-07 08:31:13 +02:00 by Wayne Dixon · 5 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: 54a9649e26
Worked: (optional)

Short description of error
When you lasso select bones, Blender will sometimes make incorrect selections.
It seems to happen more with you select a partial bone (head or tail)

Exact steps for others to reproduce the error
See video - sometimes it works, sometimes it doesn't
blender_bug_LASSO_SELECT.mp4
Red-Nelb_2.78.blend

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: `54a9649e26` Worked: (optional) **Short description of error** When you lasso select bones, Blender will sometimes make incorrect selections. It seems to happen more with you select a partial bone (head or tail) **Exact steps for others to reproduce the error** See video - sometimes it works, sometimes it doesn't [blender_bug_LASSO_SELECT.mp4](https://archive.blender.org/developer/F7794279/blender_bug_LASSO_SELECT.mp4) [Red-Nelb_2.78.blend](https://archive.blender.org/developer/F7794288/Red-Nelb_2.78.blend)
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Here's a simplified example - just a single bone: bone_lasso_select.blend
Try making a selection to the right side outside of the bone:
obraz.png
Happens only in edit mode.

Here's a simplified example - just a single bone: [bone_lasso_select.blend](https://archive.blender.org/developer/F7794335/bone_lasso_select.blend) Try making a selection to the right side outside of the bone: ![obraz.png](https://archive.blender.org/developer/F7794336/obraz.png) Happens only in edit mode.
Germano Cavalcante self-assigned this 2019-10-08 20:59:39 +02:00

This issue was referenced by 234f346c2f

This issue was referenced by 234f346c2f938ebb11f0f1e9b2c2a040f3ea5572

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70601
No description provided.