Fix T70601: Lasso select not functioning correctly in Armature Edit Mode

This solution mimics the one used for pose by ignoring the bone line if either end is clipped.